--- a/app/src/main/res/layout/activity_single_event.xml
+++ b/app/src/main/res/layout/activity_single_event.xml
@@ -5,8 +5,25 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:paddingTop="100dp"
-    android:paddingLeft="20dp"
+    android:paddingBottom="60dp"
     tools:context=".SingleEventActivity">
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        app:cardCornerRadius="30dp">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:paddingTop="20dp"
+            android:paddingBottom="20dp">
+
+
+
+
+
 
     <TextView
         android:id="@+id/textLocation"
@@ -16,6 +33,7 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Large"
         android:ellipsize="end"
         android:layout_centerHorizontal="true"
+
 
         />
 
@@ -38,10 +56,18 @@
         android:text="Description"
         android:layout_centerHorizontal="true"/>
     <TextView
+        android:id="@+id/textSender"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+
+        android:layout_below="@id/textDate"
+        android:text="Sender"
+        android:layout_centerHorizontal="true"/>
+    <TextView
         android:id="@+id/textGoingJustText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/textDate"
+        android:layout_below="@id/textSender"
         android:paddingTop="20dp"
         android:text="Going:"
         android:layout_centerHorizontal="true"/>
@@ -49,9 +75,85 @@
         android:id="@+id/textGoing"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textAlignment="center"
         android:layout_centerHorizontal="true"
         android:layout_below="@id/textGoingJustText"
         android:text="Going"/>
+
+            <TextView
+                android:id="@+id/buttonShowPeople"
+                android:layout_width="150dp"
+                android:layout_height="50dp"
+                android:layout_below="@+id/buttonUpdate"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="20dp"/>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewCentral"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:cardElevation="0dp"
+        app:cardCornerRadius="50dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="20dp"
+        android:layout_below="@+id/buttonUpdate"
+        app:cardBackgroundColor="@android:color/transparent">
+
+        <ImageView
+            android:id="@+id/imageViewCentral"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            app:layout_constraintHorizontal_bias="0.5" />
+    </androidx.cardview.widget.CardView>
+
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewRight"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        app:cardElevation="0dp"
+        app:cardCornerRadius="50dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginStart="-20dp"
+        android:layout_below="@+id/buttonUpdate"
+        app:cardBackgroundColor="@android:color/transparent"
+        android:layout_toEndOf="@+id/cardViewCentral">
+
+        <ImageView
+            android:id="@+id/imageViewRight"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            app:layout_constraintHorizontal_bias="0.5"/>
+    </androidx.cardview.widget.CardView>
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardViewLeft"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                app:cardElevation="0dp"
+                app:cardCornerRadius="50dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginStart="-20dp"
+                android:layout_below="@+id/buttonUpdate"
+                app:cardBackgroundColor="@android:color/transparent"
+                android:layout_toEndOf="@+id/cardViewRight">
+
+                <ImageView
+                    android:id="@+id/imageViewleft"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    app:layout_constraintHorizontal_bias="0.5"/>
+            </androidx.cardview.widget.CardView>
+
+    <TextView
+        android:id="@+id/textViewPlusGoing"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text=""
+        android:layout_toEndOf="@+id/cardViewLeft"
+        android:layout_below="@+id/buttonUpdate"
+        android:layout_marginTop="20dp"
+        android:layout_marginStart="10dp"/>
 
     <Button
         android:id="@+id/buttonGoing"
@@ -78,26 +180,30 @@
 
     <Button
         android:id="@+id/buttonUpdate"
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/buttonGoing"
+        android:layout_marginStart="125dp"
         android:layout_marginTop="20dp"
-        android:text="Update"
-        android:layout_marginLeft="85dp"
+        android:layout_marginBottom="20dp"
+        android:background="@drawable/ic_edit_button"
+        android:backgroundTint="#5CB300"
         android:visibility="invisible"
         tools:visibility="invisible" />
 
     <Button
         android:id="@+id/buttonDelete"
-        android:layout_width="wrap_content"
+        android:layout_width="50dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/buttonNotGoing"
         android:layout_centerHorizontal="true"
-        android:layout_marginLeft="25dp"
+        android:layout_marginStart="25dp"
         android:layout_marginTop="20dp"
-        android:layout_toRightOf="@id/buttonUpdate"
-        android:text="Delete"
+        android:layout_toEndOf="@id/buttonUpdate"
+        android:background="@drawable/ic_delete_button"
+        android:backgroundTint="#FF0000"
         android:visibility="invisible"
         tools:visibility="invisible" />
-
+        </RelativeLayout>
+</androidx.cardview.widget.CardView>
 </RelativeLayout>
