--- a/app/src/main/res/layout/example_dialog.xml
+++ b/app/src/main/res/layout/example_dialog.xml
@@ -20,6 +20,15 @@
         android:scaleType="center"
         app:srcCompat="@color/colorAccent"
         tools:srcCompat="@color/colorAccent" />
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:text="Add a new event"
+        android:textSize="24dp"
+        android:layout_marginTop="-37dp"
+        android:textAlignment="center"
+        android:textStyle="bold"
+        />
 
     <TextView
         android:id="@+id/pickLocation"
