--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -5,40 +5,95 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginTop="8dp"
     android:layout_marginStart="8dp"
-    android:layout_marginEnd="8dp">
+    android:layout_marginEnd="8dp"
+    app:cardCornerRadius="30dp" >
 <!--    app:cardBackgroundColor="#FFFFE8"-->
     
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="8dp">
+        android:padding="8dp"
+        >
 
         <TextView
             android:id="@+id/text_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Titleeeeee"
+            android:text="Title"
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:ellipsize="end"
-            android:maxLines="1"/>
+            android:maxLines="1"
+            android:layout_marginStart="25dp"
+            android:layout_toEndOf="@id/cardView"/>
+
+        <ImageView
+            android:id="@+id/imageView_time"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:src="@drawable/ic_access_time"
+            android:layout_toEndOf="@+id/cardView"
+            android:layout_below="@+id/text_location"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="4dp"/>
 
 
         <TextView
             android:id="@+id/text_view_time"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="1"
+            android:text=""
             android:layout_below="@id/text_location"
-            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
+            android:layout_toEndOf="@id/imageView_time"
+            android:layout_marginStart="5dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+        <ImageView
+            android:id="@+id/imageView_calendar"
+            android:layout_width="20dp"
+            android:layout_height="20dp"
+            android:layout_below="@+id/text_location"
+            android:layout_marginStart="25dp"
+            android:layout_marginTop="4dp"
+            android:layout_toEndOf="@+id/text_view_time"
+            android:src="@drawable/ic_event" />
+        <TextView
+            android:id="@+id/text_view_realDate"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:layout_below="@id/text_location"
+            android:layout_toEndOf="@id/imageView_calendar"
+            android:layout_marginStart="5dp"
+            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
 
         <TextView
             android:id="@+id/text_view_date"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
             android:layout_below="@id/text_view_time"
-            android:text="Description"/>
+            android:layout_marginTop="15dp"
+            android:layout_marginStart="25dp"
+            android:layout_toEndOf="@id/cardView"
+            android:text="Description" />
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            app:cardElevation="0dp"
+            app:cardCornerRadius="75dp"
+            android:layout_marginStart="10dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_centerVertical="true">
 
+        <ImageView
+            android:id="@+id/imageViewCreated"
+            android:layout_width="75dp"
+            android:layout_height="75dp"
+            android:layout_centerVertical="true"
+            app:layout_constraintHorizontal_bias="0.5"
+             />
+        </androidx.cardview.widget.CardView>
 
     </RelativeLayout>
 
