--- a/app/src/main/res/menu/menu.xml
+++ b/app/src/main/res/menu/menu.xml
@@ -8,5 +8,10 @@
         android:title="Logout"
         app:showAsAction="never"
         />
+    <item
+        android:id="@+id/profile"
+        android:title="Profile"
+        app:showAsAction="never"
+        />
 
 </menu>
