--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -32,10 +32,21 @@
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@drawable/ic_launcher_foreground" />
+                app:srcCompat="@drawable/ic_launcher_foreground"
+                android:contentDescription="@string/user" />
 
         </androidx.cardview.widget.CardView>
 
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/textViewDisplayName"
+            android:layout_marginTop="50dp"
+            android:text="Display Name:"
+            android:textSize="22sp"
+            android:textAlignment="center"
+            />
 
         <EditText
             android:id="@+id/editTextName"
@@ -43,7 +54,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:layout_marginStart="20dp"
-            android:layout_marginTop="80dp"
+            android:layout_marginTop="20dp"
             android:layout_marginEnd="20dp"
             android:ems="10"
             android:hint="Add your name and surname"
@@ -52,7 +63,8 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/buttonUploadImage" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewDisplayName"
+            android:autofillHints="" />
 
         <TextView
             android:layout_width="match_parent"
@@ -60,7 +72,7 @@
             android:id="@+id/textViewEmail"
             android:layout_marginTop="50dp"
             android:text="email"
-            android:textSize="22dp"
+            android:textSize="22sp"
             android:textAlignment="center"
             />
 
