--- a/app/src/main/res/layout/activity_single_event.xml
+++ b/app/src/main/res/layout/activity_single_event.xml
@@ -9,6 +9,7 @@
     tools:context=".SingleEventActivity">
 
     <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewMain"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
@@ -20,190 +21,278 @@
             android:paddingTop="20dp"
             android:paddingBottom="20dp">
 
+            <TextView
+                android:id="@+id/textLocation"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_centerHorizontal="true"
+                android:ellipsize="end"
+                android:layout_marginBottom="25dp"
+                android:text="Title"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:textSize="30sp" />
 
 
+            <TextView
+                android:id="@+id/textTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/textLocation"
+                android:layout_toEndOf="@+id/imageViewTime"
+                android:layout_marginStart="5dp"
+                android:text="10:00"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large" />
 
+            <ImageView
+                android:id="@+id/imageViewTime"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_access_time"
+                android:layout_marginStart="50dp"
+                android:paddingTop="4dp"
+                android:layout_below="@+id/textLocation"
+                android:contentDescription="@string/app_name" />
 
+            <TextView
+                android:id="@+id/textDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/textLocation"
+                android:layout_alignParentEnd="true"
+                android:layout_marginEnd="30dp"
+                android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                android:text="01/01/21" />
 
-    <TextView
-        android:id="@+id/textLocation"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Titleeeeee"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:ellipsize="end"
-        android:layout_centerHorizontal="true"
+            <ImageView
+                android:id="@+id/imageViewDate"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_event"
+                android:paddingTop="4dp"
+                android:layout_below="@+id/textLocation"
+                android:layout_toStartOf="@+id/textDate"
+                android:layout_marginEnd="5dp"
+                android:contentDescription="@string/app_name" />
 
+            <TextView
+                android:id="@+id/textSender"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/textDate"
+                android:layout_marginTop="20dp"
+                android:layout_centerHorizontal="true"
+                android:text="Sender" />
 
-        />
-
-
-    <TextView
-        android:id="@+id/textTime"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="1"
-        android:layout_below="@id/textLocation"
-        android:textAppearance="@style/TextAppearance.AppCompat.Large"
-        android:layout_centerHorizontal="true"/>
-
-    <TextView
-        android:id="@+id/textDate"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:layout_below="@id/textTime"
-        android:text="Description"
-        android:layout_centerHorizontal="true"/>
-    <TextView
-        android:id="@+id/textSender"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-
-        android:layout_below="@id/textDate"
-        android:text="Sender"
-        android:layout_centerHorizontal="true"/>
-    <TextView
-        android:id="@+id/textGoingJustText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/textSender"
-        android:paddingTop="20dp"
-        android:text="Going:"
-        android:layout_centerHorizontal="true"/>
-    <TextView
-        android:id="@+id/textGoing"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textAlignment="center"
-        android:layout_centerHorizontal="true"
-        android:layout_below="@id/textGoingJustText"
-        android:text="Going"/>
 
             <TextView
                 android:id="@+id/buttonShowPeople"
                 android:layout_width="150dp"
                 android:layout_height="50dp"
                 android:layout_below="@+id/buttonUpdate"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="10dp" />
+
+            <TextView
+                android:id="@+id/textGoingTextBonus"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/buttonUpdate"
+                android:layout_centerHorizontal="true"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="25dp"
+                android:layout_toEndOf="@id/cardViewCentral"
+                android:text=""
+                android:textAlignment="center"
+                android:textSize="20sp" />
+
+            <TextView
+                android:id="@+id/textViewGoingForPictures"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_above="@+id/cardViewCentral"
+                android:layout_marginStart="20dp"
+                android:text="Going: "
+                android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardViewCentral"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_below="@+id/buttonUpdate"
+                android:layout_marginStart="20dp"
                 android:layout_marginTop="10dp"
-                android:layout_marginStart="20dp"/>
+                app:cardBackgroundColor="@android:color/transparent"
+                app:cardCornerRadius="30dp"
+                app:cardElevation="0dp">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardViewCentral"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        app:cardElevation="0dp"
-        app:cardCornerRadius="50dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="20dp"
-        android:layout_below="@+id/buttonUpdate"
-        app:cardBackgroundColor="@android:color/transparent">
-
-        <ImageView
-            android:id="@+id/imageViewCentral"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            app:layout_constraintHorizontal_bias="0.5" />
-    </androidx.cardview.widget.CardView>
+                <ImageView
+                    android:id="@+id/imageViewCentral"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:contentDescription="@string/user"
+                    app:layout_constraintHorizontal_bias="0.5" />
+            </androidx.cardview.widget.CardView>
 
 
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardViewRight"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:layout_below="@+id/buttonUpdate"
+                android:layout_marginStart="-20dp"
+                android:layout_marginTop="10dp"
+                android:layout_toEndOf="@+id/cardViewCentral"
+                app:cardBackgroundColor="@android:color/transparent"
+                app:cardCornerRadius="30dp"
+                app:cardElevation="0dp">
 
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardViewRight"
-        android:layout_width="50dp"
-        android:layout_height="50dp"
-        app:cardElevation="0dp"
-        app:cardCornerRadius="50dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="-20dp"
-        android:layout_below="@+id/buttonUpdate"
-        app:cardBackgroundColor="@android:color/transparent"
-        android:layout_toEndOf="@+id/cardViewCentral">
+                <ImageView
+                    android:id="@+id/imageViewRight"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
+                    android:contentDescription="@string/user"
+                    app:layout_constraintHorizontal_bias="0.5" />
+            </androidx.cardview.widget.CardView>
 
-        <ImageView
-            android:id="@+id/imageViewRight"
-            android:layout_width="50dp"
-            android:layout_height="50dp"
-            app:layout_constraintHorizontal_bias="0.5"/>
-    </androidx.cardview.widget.CardView>
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardViewLeft"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                app:cardElevation="0dp"
-                app:cardCornerRadius="50dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginStart="-20dp"
                 android:layout_below="@+id/buttonUpdate"
+                android:layout_marginStart="-20dp"
+                android:layout_marginTop="10dp"
+                android:layout_toEndOf="@+id/cardViewRight"
                 app:cardBackgroundColor="@android:color/transparent"
-                android:layout_toEndOf="@+id/cardViewRight">
+                app:cardCornerRadius="30dp"
+                app:cardElevation="0dp">
 
                 <ImageView
                     android:id="@+id/imageViewleft"
                     android:layout_width="50dp"
                     android:layout_height="50dp"
-                    app:layout_constraintHorizontal_bias="0.5"/>
+                    android:contentDescription="@string/user"
+                    app:layout_constraintHorizontal_bias="0.5" />
             </androidx.cardview.widget.CardView>
 
-    <TextView
-        android:id="@+id/textViewPlusGoing"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text=""
-        android:layout_toEndOf="@+id/cardViewLeft"
-        android:layout_below="@+id/buttonUpdate"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="10dp"/>
+            <TextView
+                android:id="@+id/textViewPlusGoing"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/buttonUpdate"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="20dp"
+                android:layout_toEndOf="@+id/cardViewLeft"
+                android:text=""
+                android:textSize="20sp" />
 
-    <Button
-        android:id="@+id/buttonGoing"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/textGoing"
-        android:layout_marginTop="20dp"
-        android:layout_centerHorizontal="true"
-        android:text="Going"
-        android:visibility="invisible"
-        tools:visibility="invisible" />
+            <Button
+                android:id="@+id/buttonGoing"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/buttonDelete"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="80dp"
+                android:layout_marginEnd="30dp"
+                android:text="Going"
+                android:visibility="invisible"
+                tools:visibility="invisible" />
 
-    <Button
-        android:id="@+id/buttonNotGoing"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/textGoing"
-        android:layout_centerHorizontal="true"
-        android:layout_marginLeft="20dp"
-        android:layout_marginTop="20dp"
-        android:text="Not Going"
-        android:visibility="invisible"
-        tools:visibility="invisible" />
+            <Button
+                android:id="@+id/buttonNotGoing"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/buttonDelete"
+                android:layout_alignParentEnd="true"
+                android:layout_marginTop="80dp"
+                android:layout_marginEnd="20dp"
+                android:text="Not Going"
+                android:visibility="invisible"
+                tools:visibility="invisible" />
 
-    <Button
-        android:id="@+id/buttonUpdate"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/buttonGoing"
-        android:layout_marginStart="125dp"
-        android:layout_marginTop="20dp"
-        android:layout_marginBottom="20dp"
-        android:background="@drawable/ic_edit_button"
-        android:backgroundTint="#5CB300"
-        android:visibility="invisible"
-        tools:visibility="invisible" />
+            <Button
+                android:id="@+id/buttonUpdate"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/textSender"
+                android:layout_marginStart="125dp"
+                android:layout_marginTop="20dp"
+                android:layout_marginBottom="70dp"
+                android:background="@drawable/ic_edit_button"
+                android:backgroundTint="#5CB300"
+                android:visibility="invisible"
+                tools:visibility="invisible" />
 
-    <Button
-        android:id="@+id/buttonDelete"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/buttonNotGoing"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="25dp"
-        android:layout_marginTop="20dp"
-        android:layout_toEndOf="@id/buttonUpdate"
-        android:background="@drawable/ic_delete_button"
-        android:backgroundTint="#FF0000"
-        android:visibility="invisible"
-        tools:visibility="invisible" />
+            <Button
+                android:id="@+id/buttonDelete"
+                android:layout_width="50dp"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/textSender"
+                android:layout_centerHorizontal="true"
+                android:layout_marginStart="25dp"
+                android:layout_marginTop="20dp"
+                android:layout_toEndOf="@id/buttonUpdate"
+                android:background="@drawable/ic_delete_button"
+                android:backgroundTint="#FF0000"
+                android:visibility="invisible"
+                tools:visibility="invisible" />
         </RelativeLayout>
-</androidx.cardview.widget.CardView>
+    </androidx.cardview.widget.CardView>
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewComments"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/cardViewSendComment"
+        app:cardCornerRadius="30dp"
+        android:layout_margin="15dp">
+        <TextView
+            android:id="@+id/textViewComments"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@+id/cardViewMain"
+            android:layout_margin="10dp"
+            android:text="" />
+    </androidx.cardview.widget.CardView>
+
+
+    <androidx.cardview.widget.CardView
+        android:id="@+id/cardViewSendComment"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_below="@+id/cardViewMain"
+        android:layout_margin="15dp"
+        android:layout_marginTop="20dp"
+        app:cardCornerRadius="30dp">
+
+        <RelativeLayout
+            android:id="@+id/relativeLayoutComment"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="1dp">
+
+
+            <EditText
+                android:id="@+id/editTextComment"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:ems="13"
+                android:layout_marginStart="15dp"
+                android:hint="Add a comment..."
+                android:inputType="textCapSentences" />
+
+            <Button
+                android:id="@+id/sendButton"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_alignParentEnd="true"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="10dp"
+                android:background="@drawable/ic_send" />
+
+
+        </RelativeLayout>
+
+
+    </androidx.cardview.widget.CardView>
 </RelativeLayout>
