--- a/app/src/main/res/layout/example_dialog.xml
+++ b/app/src/main/res/layout/example_dialog.xml
@@ -1,9 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<androidx.constraintlayout.widget.ConstraintLayout-->
-<!--    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"-->
-<!--    android:layout_height="match_parent">-->
-
-<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
@@ -24,8 +19,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:text="Add a new event"
-        android:textSize="24dp"
-        android:layout_marginTop="-37dp"
+        android:textSize="24sp"
+        android:textColor="@android:color/white"
+        android:layout_marginTop="-40dp"
         android:textAlignment="center"
         android:textStyle="bold"
         />
@@ -50,7 +46,8 @@
         android:layout_marginBottom="4dp"
         android:hint="Location"
         android:textAlignment="center"
-        android:inputType="textCapSentences"/>
+        android:inputType="textCapSentences"
+        android:autofillHints="" />
 
     <TextView
         android:id="@+id/pickTime"
@@ -62,11 +59,7 @@
         android:textSize="18sp"
         android:textStyle="bold" />
 
-<!--    <TimePicker-->
-<!--        android:id="@+id/datePicker1"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:timePickerMode="spinner" />-->
+
     <EditText
         android:id="@+id/vreme"
         android:layout_width="wrap_content"
@@ -77,7 +70,7 @@
         android:focusable="false"
         android:textAlignment="center"
         android:hint="15:30"
-        />
+        android:autofillHints="" />
 
     <TextView
         android:id="@+id/pickDate"
@@ -99,7 +92,8 @@
         android:editable="false"
         android:focusable="false"
         android:textAlignment="center"
-        android:hint="02/05/20"/>
+        android:hint="02/05/20"
+        android:autofillHints="" />
 
 
 
