--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -19,7 +19,7 @@
             android:id="@+id/text_location"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Title"
+            android:text=""
             android:textAppearance="@style/TextAppearance.AppCompat.Large"
             android:ellipsize="end"
             android:maxLines="1"
@@ -28,6 +28,7 @@
 
         <ImageView
             android:id="@+id/imageView_time"
+            android:contentDescription="@string/user"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:src="@drawable/ic_access_time"
@@ -49,6 +50,7 @@
 
         <ImageView
             android:id="@+id/imageView_calendar"
+            android:contentDescription="@string/user"
             android:layout_width="20dp"
             android:layout_height="20dp"
             android:layout_below="@+id/text_location"
@@ -75,19 +77,20 @@
             android:layout_marginTop="15dp"
             android:layout_marginStart="25dp"
             android:layout_toEndOf="@id/cardView"
-            android:text="Description" />
+            android:text="" />
         <androidx.cardview.widget.CardView
             android:id="@+id/cardView"
             android:layout_width="75dp"
             android:layout_height="75dp"
             app:cardElevation="0dp"
-            app:cardCornerRadius="75dp"
+            app:cardCornerRadius="40dp"
             android:layout_marginStart="10dp"
             android:layout_gravity="center_horizontal"
             android:layout_centerVertical="true">
 
         <ImageView
             android:id="@+id/imageViewCreated"
+            android:contentDescription="@string/user"
             android:layout_width="75dp"
             android:layout_height="75dp"
             android:layout_centerVertical="true"
