--- a/app/src/main/res/menu/navigation_menu.xml
+++ b/app/src/main/res/menu/navigation_menu.xml
@@ -4,7 +4,8 @@
 
     <item android:id="@+id/menuProfile"
         android:icon="@drawable/ic_person"
-        android:title="Edit Profile"/>
+        android:title="Edit Profile"
+        />
     <item
         android:id="@+id/menuLogout"
         android:icon="@drawable/ic_exit_to_app"
